# git-sumi

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml-e  LICENSE-MIT  README.md  cliff.toml  dist-workspace.toml  release  renovate.json  sumi.toml
.githooks/: pre-commit  prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  ci.yml  git-sumi.yaml  release.yml  website.yml
.release-hooks/: pre-release
assets/: git-sumi_demo.tape
pypi/: pyproject.toml
src/: args.rs  config.rs  errors.rs  git.rs  lib.rs  lint.rs  main.rs  parser.rs
src/lint/: constants.rs  display.rs
src/lint/constants/: config_descriptions.rs  gitmoji.rs  non_imperative_verbs.rs
src/parser/: basic_parser.rs  conventional_commit_parser.rs  parsed_commit.rs
tests/: integration_tests.rs
tests/lint/: mod.rs  test_combined_rules.rs  test_comments.rs  test_commit_changes.rs  test_commit_range.rs  test_config.rs  test_conventional_commits.rs  test_display.rs  test_file_input.rs  test_gitmoji.rs  test_header_pattern_stripping.rs  test_single_rule.rs
tests/resources/: bad_config_duplicated_gitmoji.toml  bad_config_gitmoji_boolean_string.toml  good_config_ciqf.toml  good_config_conventional_false.toml  good_config_df_json.toml  good_config_gitmoji.toml  good_config_gitmoji_false.toml  good_config_imperative.toml  good_config_imperative_false.toml  good_config_max_length_no_whitespace.toml  good_config_types.toml
website/: docusaurus.config.js  package-lock.json  package.json
website/docs/: configuration.md  examples.md  faq.md  index.md  integration.md  rules.md  usage.md
website/src/components/: ThemeAwareImage.js
website/src/components/HomepageFeatures/: index.js  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css
