[package]
name = "git-sumi"
version = "0.0.9"  # managed by release script
authors = ["Óscar Fernández <osc@osc.garden>"]
description = "Non-opinionated commit message linter"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://sumi.rs"
readme = "README.md"
keywords = ["git", "commit", "lint", "conventional-commits", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/welpo/git-sumi"
exclude = [
    "artifacts",
    "website",
    "target",
    "pypi",
    ".github",
    "tests",
    "release",
    "cliff.toml",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "sumi.toml",
    ".gitignore",
]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
clap_complete = "4.5.2"
dirs = "6.0.0"
env_logger = "0.11.3"
git-conventional = "0.12.6"
log = "0.4.21"
prettytable-rs = "0.10"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
strum = "0.27.0"
strum_macros = "0.27.0"
tabled = "0.20.0"
thiserror = "1.0.59"
toml = "0.8.12"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1"
rand = "0.9.0"
tempfile = "3.10.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"   # Let it crash and force ourselves to write safe Rust.
strip = true

# The profile that 'cargo dist' will build with.
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.28.6"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "aarch64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Don't auto-update release.yml; necessary until cargo-dist can upload to PyPI and crates.io.
# Related issues: https://github.com/axodotdev/cargo-dist/issues/405 and https://github.com/axodotdev/cargo-dist/issues/86
allow-dirty = ["ci"]
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
