[package]
name = "git-sumi"
version = "0.3.0"  # managed by release script
authors = ["Óscar Fernández <osc@osc.garden>"]
description = "Non-opinionated commit message linter"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://sumi.rs"
readme = "README.md"
keywords = ["git", "commit", "lint", "conventional-commits", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/welpo/git-sumi"
exclude = [
    "artifacts",
    "website",
    "target",
    "pypi",
    ".github",
    "tests",
    "release",
    "cliff.toml",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "sumi.toml",
    ".gitignore",
]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
clap_complete = "4.5.2"
dirs = "6.0.0"
env_logger = "0.11.3"
git-conventional = "1.0.0"
log = "0.4.21"
prettytable-rs = "0.10"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
strum = "0.28.0"
strum_macros = "0.28.0"
tabled = "0.20.0"
thiserror = "2.0.17"
toml = "1.0.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1"
rand = "0.10.0"
tempfile = "3.10.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"   # Let it crash and force ourselves to write safe Rust.
strip = true

# The profile that 'cargo dist' will build with.
[profile.dist]
inherits = "release"
lto = "thin"
